--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_database: ^11.3.4
   cupertino_icons: ^1.0.8
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
