--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,9 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_database: ^11.3.4
   cupertino_icons: ^1.0.8
-
+  provider: ^6.0.0
+  firebase_ml_model_downloader: 0.3.3+2
+  tflite: ^1.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -66,6 +68,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/Prev1.png
+    - assets/mlmodel/
   
 
   # An image asset can refer to one or more reuttesolution-specific "variants", see
