--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   provider: ^6.0.0
   firebase_ml_model_downloader: 0.3.3+2
   tflite: ^1.1.2
+  http: ^0.13.3
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
