--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,8 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/images/Prev1.png
-    - assets/mlmodel/
+    - assets/images/appbar_icons/
     - .env
   
 
