--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   tflite: ^1.1.2
   http: ^0.13.3
   flutter_dotenv: ^5.2.1
-
+  lorem_ipsum: 0.0.3
 
 dev_dependencies:
   flutter_test:
